--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,23 @@
 Package: LTBIscreeningproject
 Type: Package
-Title: What the Package Does (Title Case)
+Title: LTBI Screening Cost-Effectiveness Analysis
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Author: Nathan Green
+Maintainer: Nathan Green <nathan.green@imperial.ac.uk>
 Description: More about what it does (maybe more than one line)
-License: What license is it under?
+License: MIT
 LazyData: TRUE
+Imports:
+    QALY,
+    ggplot2,
+    readxl,
+    data.tree,
+    treeSimR,
+    survival,
+    mstate,
+    cmprsk,
+    reshape,
+    GGally,
+    BCEA,
+    data.table
+RoxygenNote: 5.0.1
