--- a/data/LTBI_dtree-health.yaml
+++ b/data/LTBI_dtree-health.yaml
@@ -63,7 +63,19 @@
                   distn: unif
                   min: 0
                   max: 0
-                  type: terminal
+                  type: chance
+                  Effective:
+                    p: 0.9
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
+                  Not Effective:
+                    p: 0.1
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
                 Not Complete Treatment:
                   p: 0.2
                   distn: unif
@@ -189,7 +201,19 @@
                   distn: unif
                   min: 0
                   max: 0
-                  type: terminal
+                  type: chance
+                  Effective:
+                    p: 0.9
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
+                  Not Effective:
+                    p: 0.1
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
                 Not Complete Treatment:
                   p: 0.2
                   distn: unif
@@ -315,7 +339,19 @@
                   distn: unif
                   min: 0
                   max: 0
-                  type: terminal
+                  type: chance
+                  Effective:
+                    p: 0.9
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
+                  Not Effective:
+                    p: 0.1
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
                 Not Complete Treatment:
                   p: 0.2
                   distn: unif
@@ -441,7 +477,19 @@
                   distn: unif
                   min: 0
                   max: 0
-                  type: terminal
+                  type: chance
+                  Effective:
+                    p: 0.9
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
+                  Not Effective:
+                    p: 0.1
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
                 Not Complete Treatment:
                   p: 0.2
                   distn: unif
@@ -567,7 +615,19 @@
                   distn: unif
                   min: 0
                   max: 0
-                  type: terminal
+                  type: chance
+                  Effective:
+                    p: 0.9
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
+                  Not Effective:
+                    p: 0.1
+                    distn: unif
+                    min: 0
+                    max: 0
+                    type: terminal
                 Not Complete Treatment:
                   p: 0.2
                   distn: unif
