QALY loss calcs and plots for active TB CFR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,14 @@
 
 export(calc.ICER)
 export(calc.INMB)
-export(calc_QALY_uk_tb)
+export(calc_QALY_tb)
 export(calc_num_active_tb)
 export(count_comprsk_events)
-export(create_screened_cohort_QALYs)
-export(create_screened_cohort_cost)
+export(screened_cohort_QALYs)
+export(screened_cohort_cost)
 export(impute_LTBI_status)
 export(is.death)
 export(myPruneFun)
 export(prob_from_cum_incidence)
-export(sample_uk_tb)
+export(sample_tb)
 export(sim_aTB_times)
