* remove with(.) * add discounting to active TB costs * add secondary infection costs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     dplyr,
     reshape2,
     magrittr,
-    purrr
+    purrr,
+    readr
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown,
