* move plotting extraplate/impute to separate file * extract function for sample tb time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,4 @@ export(is.death)
 export(myPruneFun)
 export(prob_from_cum_incidence)
 export(sample_tb)
-export(sim_aTB_times)
+export(sim_exituk_tb_times)
