--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,14 @@ export(calc.INMB)
 export(calc_QALY_tb)
 export(calc_num_active_tb)
 export(count_comprsk_events)
-export(screened_cohort_QALYs)
-export(screened_cohort_cost)
 export(impute_LTBI_status)
 export(is.death)
 export(myPruneFun)
 export(prob_from_cum_incidence)
 export(sample_tb)
+export(sample_tb_year)
+export(screened_cohort_QALYs)
+export(screened_cohort_cost)
 export(sim_exituk_tb_times)
+export(sim_uktb_times)
+export(subpop_by_exituk_year)
