rescale probability of active TB from Aldridge, Lancet so that its prgression from LTBI rather than for whole immigrant risk set

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,9 @@ Imports:
     magrittr,
     purrr,
     readr,
-    logging
+    logging,
+    arm,
+    parallel
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown,
