--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(prob_from_cum_incidence)
 export(sample_tb)
 export(sample_tb_year)
 export(sample_tb_year2)
+export(scenario_QALY)
+export(scenario_cost)
 export(screened_cohort_QALYs)
 export(screened_cohort_cost)
 export(sim_exituk_tb_times)
