complete cost-effectiveness vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calc.INMB)
 export(calc_QALY_tb)
 export(calc_num_active_tb)
 export(cost_tb_notif)
+export(costeff_stats)
 export(count_comprsk_events)
 export(decision_tree_cluster)
 export(impute_LTBI_status)
