update the main scripts (for batch running) to correspond with updated vignettes
add tests for this

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,12 +35,14 @@ Imports:
     logging,
     arm,
     parallel,
-    ggtern
+    ggtern,
+    miscUtilities
 RoxygenNote: 6.0.1
 Suggests:
     knitr,
     rmarkdown,
     testthat,
+    assertthat,
     denstrip,
     plotCostEffectiveness
 VignetteBuilder: knitr
