* move scenario_file_tag to script where it is used * minor typos

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     arm,
     parallel,
     ggtern,
-    miscUtilities
+    miscUtilities,
+    crayon
 RoxygenNote: 6.0.1
 Suggests:
     knitr,
