# * tidy and check strat_pop_year() * add more tests * tidy help

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cost_tb_notif)
 export(costeff_stats)
 export(count_comprsk_events)
 export(decision_tree_cluster)
+export(hist_progression_times)
 export(impute_LTBI_status)
 export(is.death)
 export(lm_wtp)
@@ -19,6 +20,7 @@ export(nmb)
 export(oneway_matrix)
 export(optimal_thresholds)
 export(prob_from_cum_incidence)
+export(rows_first_n_ids)
 export(sample_tb)
 export(sample_tb_year)
 export(scenario_QALY)
