fix bug for rows_first_n_ids() naming id_avoided wrong
save a decision tree as csv for model checking

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     parallel,
     ggtern,
     miscUtilities,
-    crayon
+    crayon,
+    tibble
 RoxygenNote: 6.0.1
 Suggests:
     knitr,
