--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,10 @@ export(oneway_matrix)
 export(optimal_thresholds)
 export(prob_from_cum_incidence)
 export(rows_first_n_ids)
+export(run_model)
 export(sample_tb)
 export(sample_tb_year)
+export(save_session_info)
 export(scenario_QALY)
 export(scenario_cost)
 export(screened_cohort_QALYs)
