##create new tables
*include tb counts in dectree subset table
*new combination table functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,22 @@ export(cost_tb_notif)
 export(costeff_stats)
 export(count_comprsk_events)
 export(decision_tree_cluster)
+export(from_list_to_BCEA)
 export(hist_progression_times)
 export(impute_LTBI_status)
+export(insert_dectree_cost)
 export(is.death)
+export(leaf_df_by_name)
 export(lm_wtp)
 export(my_ToDataFrameTable)
 export(my_ToDataFrameTypeCol)
 export(net_benefit)
 export(nmb)
+export(num_subset_dectree)
 export(oneway_matrix)
 export(optimal_thresholds)
+export(policy_cohort)
+export(policy_run)
 export(prob_from_cum_incidence)
 export(rows_first_n_ids)
 export(run_model)
@@ -35,3 +41,6 @@ export(subpop_by_exituk_year)
 export(subset_pop_dectree)
 export(table_costeffectiveness)
 export(table_tb_avoided)
+import(crayon)
+import(git2r)
+import(sessioninfo)
