replace separate sim_tb_times functions with a single function in synthetic cohort script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,8 +35,7 @@ export(scenario_QALY)
 export(scenario_cost)
 export(screened_cohort_QALYs)
 export(screened_cohort_cost)
-export(sim_exituk_tb_times)
-export(sim_uktb_times)
+export(sim_tb_times)
 export(subpop_by_exituk_year)
 export(subset_pop_dectree)
 export(table_costeffectiveness)
