--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,10 @@ Imports:
     readxl,
     data.tree,
     treeSimR,
-    survival,
-    mstate,
     cmprsk,
     reshape,
     GGally,
     BCEA,
-    data.table,
     purrr,
     plyr,
     dplyr,
@@ -39,7 +36,8 @@ Imports:
     miscUtilities,
     crayon,
     tibble,
-    withr
+    withr,
+    assertr
 RoxygenNote: 6.0.1
 Suggests:
     knitr,
