--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
     tibble,
     withr,
     assertr,
-    devtools
+    devtools,
+    lattice
 RoxygenNote: 6.0.1
 Suggests:
     knitr,
@@ -47,5 +48,8 @@ Suggests:
     assertthat,
     denstrip,
     plotCostEffectiveness,
-    memoise
+    memoise,
+    directlabels,
+    cowplot,
+    gridExtra
 VignetteBuilder: knitr
