--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(CE_plane_trajectories)
 export(activetb_qaly_cost)
 export(base_filled_contour_grid)
 export(bayeslm_wtp)
+export(bcea_incremental)
 export(branch_unif_params)
 export(calc.ICER)
 export(calc.INMB)
@@ -17,6 +18,7 @@ export(calc_num_active_tb)
 export(cbind_all_subsets)
 export(cc_lot_kernel)
 export(ce_boundary_plot)
+export(ce_default)
 export(ce_plane_with_annotations)
 export(coefficient_plots)
 export(combine_cost_and_p_xlsheets)
