move input data plots and table scripts to data-raw and create .md files to view in GitHub

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(set_branch_uniform_params,default)
 S3method(set_branch_uniform_params,test)
 export(CE_plane_trajectories)
 export(activetb_qaly_cost)
+export(assign_LTBI_status)
 export(base_filled_contour_grid)
 export(bayeslm_wtp)
 export(bcea_incremental)
@@ -37,11 +38,11 @@ export(decision_tree_cluster)
 export(design_matrix)
 export(diroutput)
 export(expected_cost_QALY)
+export(fill_to_fup_max_year)
 export(freq_table_for_publication)
 export(gg_care_cascade)
 export(handle_try_error)
 export(hist_progression_times)
-export(impute_LTBI_status)
 export(inmb_from_bcea)
 export(inmb_levelplot)
 export(insert_dectree_cost)
@@ -79,6 +80,7 @@ export(policy_interv)
 export(predict_nmb_wtp)
 export(prob_from_cum_incidence)
 export(prob_subset_dectree)
+export(remove_from_riskset)
 export(rows_first_n_ids)
 export(run_final_message)
 export(run_model)
