extend nmb_predictions() so that also uses data that the model was originally fit with as well as new data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,7 +104,7 @@ export(table_costeffectiveness)
 export(table_tb_avoided)
 export(table_tb_avoided_wide)
 export(test)
-export(wide_INMB)
+export(make_wide_INMB)
 import(crayon)
 import(git2r)
 import(sessioninfo)
