extend strat_pop_year to take original data with fup and sped up with data.table()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ S3method(set_branch_uniform_params,default)
 S3method(set_branch_uniform_params,test)
 export(CE_plane_trajectories)
 export(activetb_qaly_cost)
+export(append_scenario_num)
 export(assign_LTBI_status)
 export(base_filled_contour_grid)
+export(bayes_predict)
 export(bayeslm_wtp)
 export(bcea_incremental)
 export(boxplot_INMB)
@@ -35,6 +37,7 @@ export(create_and_save_scenarios)
 export(create_avoid_tb_list)
 export(create_pred_newdata)
 export(decision_tree_cluster)
+export(dectree_to_dataframe)
 export(design_matrix)
 export(diroutput)
 export(expected_cost_QALY)
@@ -42,6 +45,7 @@ export(freq_table_for_publication)
 export(gg_care_cascade)
 export(handle_try_error)
 export(hist_progression_times)
+export(histogram_INMB)
 export(inmb_from_bcea)
 export(inmb_levelplot)
 export(insert_dectree_cost)
@@ -55,6 +59,7 @@ export(lm_multi_wtp)
 export(make_ce0)
 export(make_ce1)
 export(make_incremental_ce)
+export(make_wide_INMB)
 export(my_ToDataFrameTable)
 export(my_ToDataFrameTypeCol)
 export(net_benefit_list)
@@ -77,8 +82,11 @@ export(plots_and_tables_scenarios)
 export(policy_cohort)
 export(policy_interv)
 export(predict_nmb_wtp)
+export(prob_ce_gridplot)
 export(prob_from_cum_incidence)
 export(prob_subset_dectree)
+export(remove_cols_constant_vars)
+export(ridgeslineplot_INMB)
 export(rows_first_n_ids)
 export(run_final_message)
 export(run_model)
@@ -96,6 +104,10 @@ export(screened_cohort_cost)
 export(set_branch_uniform_params)
 export(setup_folders)
 export(sim_tb_times)
+export(split_time_intervals)
+export(stan_predict)
+export(stan_predictions)
+export(strat_pop_year)
 export(subpop_by_exituk_year)
 export(subset_dectree)
 export(subset_pop_dectree)
@@ -104,7 +116,10 @@ export(table_costeffectiveness)
 export(table_tb_avoided)
 export(table_tb_avoided_wide)
 export(test)
-export(make_wide_INMB)
+export(tornado_plot_ICER)
+export(tornado_plot_INMB)
+export(tornado_sim_plot)
 import(crayon)
+import(data.table)
 import(git2r)
 import(sessioninfo)
