basic tidying and graph extensions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,5 +54,8 @@ Suggests:
     directlabels,
     cowplot,
     gridExtra,
-    covr
+    covr,
+    ggridges,
+    lattice,
+    grid
 VignetteBuilder: knitr
